# musical_mel_transform_torch

./: .gitignore  LICENSE  README.md  pyproject.toml
src/musical_mel_transform/: __init__.py  conv_fft.py  musical_mel.py
src/musical_mel_transform/scripts/: __init__.py  benchmark_performance.py  compare_feats.py  demo.py
tests/: __init__.py  test_fft.py  test_musical_mel.py  test_onnx_export.py
